# updatechecklib

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: updatecheck.h
lib/: updatecheck.cpp  updatecheck.h
